--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -43,6 +43,7 @@
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
   --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+
   @keyframes scroll {
     to {
       transform: translate(calc(-50% - 0.5rem));
@@ -124,10 +125,14 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
-  html, body {
+
+  html,
+  body {
+    cursor: url("/blue-pointer-cursor.webp"), pointer;
     cursor: url("/blue-cursor.webp"), default;
-}
+  }
 }
